[package]
name = "octocat"
version = "0.1.0"
authors = ["James N. V. Cash <james.nvc@gmail.com>"]

[dependencies]
iron = "^0.4"
serde = "^0.7"
serde_macros = "^0.7"
serde_json = "^0.7"
rmp = "^0.7"
rmp-serde = "^0.9"
uuid = { version =  "0.2", features = ["v4"] }
byteorder = "0.5"
toml = "0.1"
hyper = "^0.9"
regex = "0.1"
lazy_static = "0.2.1"
mime = "^0.2"
openssl = "0.7.14"
rustc-serialize = "0.3.19"
rusqlite = "0.7.3"

[profile.release]
lto = true
